# teamly-kb-updater

./: .gitignore  ip-cert.cnf  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  dispatcher.py  logging.py
app/handlers/: article.py
app/schemas/: article.py
app/tests/: conftest.py  helpers.py
app/tests/integration/: test_webhook_route.py
app/tests/unit/: test_dispatcher.py
script/: start_service.sh
